--- a/StudentManagementSystem/Src/WebApp/Views/Web.config
+++ b/StudentManagementSystem/Src/WebApp/Views/Web.config
@@ -17,8 +17,8 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
-        <add namespace="StudentManagementSystem" />
-        <add namespace="StudenManagementSystem.Shared"/>
+        <add namespace="StudentManagementSystem.Web" />
+        <add namespace="StudentManagementSystem.Shared"/>
         <!--<add namespace="StudentManagementSystem.ViewModels"/>-->
       </namespaces>
     </pages>
