--- a/StudentManagementSystem/Src/Authentication/packages.config
+++ b/StudentManagementSystem/Src/Authentication/packages.config
@@ -11,4 +11,5 @@
   <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net46" />
   <package id="Owin" version="1.0" targetFramework="net46" />
+  <package id="TypeLite" version="1.8.2" targetFramework="net46" />
 </packages>
