--- a/StudentManagementSystem/Src/Shared/packages.config
+++ b/StudentManagementSystem/Src/Shared/packages.config
@@ -2,6 +2,13 @@
 <packages>
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net46" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net46" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net46" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net46" />
+  <package id="MongoDB.Bson" version="2.4.2" targetFramework="net46" />
+  <package id="MongoDB.Driver" version="2.4.2" targetFramework="net46" />
+  <package id="MongoDB.Driver.Core" version="2.4.2" targetFramework="net46" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net46" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net46" />
 </packages>
