--- a/StudentManagementSystem/Src/WebApp/packages.config
+++ b/StudentManagementSystem/Src/WebApp/packages.config
@@ -38,6 +38,7 @@
   <package id="Owin" version="1.0" targetFramework="net46" />
   <package id="Respond" version="1.4.2" targetFramework="net46" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net46" />
+  <package id="TypeLite" version="1.8.2" targetFramework="net46" />
   <package id="Unity" version="4.0.1" targetFramework="net46" />
   <package id="Unity.Mvc" version="4.0.1" targetFramework="net46" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net46" />
