--- a/StudentManagementSystem/Src/WebApp/tsconfig.json
+++ b/StudentManagementSystem/Src/WebApp/tsconfig.json
@@ -1,18 +1,27 @@
 ﻿{
   "compileOnSave": true,
   "compilerOptions": {
-    "target": "es5",
-    "module": "commonjs",
-    "moduleResolution": "node",
-    "sourceMap": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "removeComments": false,
-    "noImplicitAny": false
+    "lib": [ "es5", "dom" ],
+    "typeRoots": [
+      "./node_modules/@types"
+    ],
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "noImplicitAny": false,
+    "sourceMap": true,
+    "suppressImplicitAnyIndexErrors": true,
+    "target": "es6",
+    "removeComments": false
   },
   "exclude": [
-    "node_modules",
-    "typings/main",
+    "node_modules/*",
+    "dist",
+    "aot/*",
+    "app/*-aot.ts",
+    "typings/main/*",
+    //"typings/**/*",
     "typings/main.d.ts",
     "Scripts/TypeLite.Net4.d.ts"
   ]
