--- a/StudentManagementSystem/Src/WebApp/package.json
+++ b/StudentManagementSystem/Src/WebApp/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-server": "~2.4.0",
     "@angular/router": "~3.4.0",
     "@angular/upgrade": "~2.4.0",
+    "core-js": "^2.4.1",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.1",
     "systemjs": "0.19.40",
